external-crates/move/crates/move-compiler/tests/development/enums/matching/tuple_specialize.exp
error[E13003]: feature is under active development
  ┌─ tests/development/enums/matching/tuple_specialize.move:3:17
  │
3 │     public enum Tup<A,B,C> {
  │                 ^^^ Enums are not supported in bytecode.
  │
  = This feature is currently in development.

